# Celeste-PCG

./: .gitignore  CHANGELOG.md  LICENSE  MT-Loulou.code-workspace  README.md  pyproject.toml
Celeste_PCG.egg-info/: SOURCES.txt  top_level.txt
celeste-venv/: pyvenv.cfg
celestial_cartographiers/: entity_map.jl
cskeleston/: cskeleton_notebook.ipynb  cskeleton_sandbox.ipynb  skeleton_generator.ipynb
data/0-Intro/: lvl_-1_fg.csv  lvl_0_bg.csv  lvl_0_obj.csv  lvl_0b_fg.csv  lvl_1_bg.csv  lvl_1_entities.json  lvl_1_fg.csv  lvl_3_entities.json  lvl_3_fg.csv  lvl_3_obj.csv  lvl_x1_fg.csv
data/1-ForsakenCity/: lvl_10_bg.csv  lvl_10_fg.csv  lvl_10a_bg.csv  lvl_10a_entities.json  lvl_10a_fg.csv  lvl_10z_bg.csv  lvl_10z_fg.csv  lvl_10zb_bg.csv  lvl_10zb_fg.csv  lvl_11_bg.csv  lvl_11_entities.json  lvl_11z_bg.csv  lvl_12_bg.csv  lvl_12_entities.json  lvl_12a_entities.json  lvl_12z_bg.csv  lvl_12z_entities.json  lvl_1_entities.json  lvl_2_bg.csv  lvl_2_entities.json  lvl_3b_bg.csv  lvl_3b_entities.json  lvl_3b_fg.csv  lvl_4_entities.json  lvl_5_bg.csv  lvl_5_fg.csv  lvl_5_obj.csv  lvl_5a_entities.json  lvl_5z_bg.csv  lvl_5z_entities.json  lvl_6a_bg.csv  lvl_6a_fg.csv  lvl_6a_obj.csv  lvl_6b_bg.csv  lvl_6b_fg.csv  lvl_6c_entities.json  lvl_6z_bg.csv  lvl_6z_entities.json  lvl_6z_fg.csv  lvl_6zb_bg.csv  (+23 more)
data/1H-ForsakenCity/: lvl_00_bg.csv  lvl_00_entities.json  lvl_00_fg.csv  lvl_02_bg.csv  lvl_02_entities.json  (+23 more)
data_loader/: data_loader.ipynb  data_loader_test_info.ipynb  entities_reader.ipynb
room_encoder/: data_to_levels.ipynb
seleCte/: main.tex  utils.py
(+28049 files in other folders)
